# NMT-MenKan

./: .dockerignore  .gitattributes  .gitignore  BUILD_DOCS.md  CMakeLists.txt  DEVELOPER_NOTES.md  Dockerfile  EN_IT_LORA_WORKFLOW.md  HF_API_INTEGRATION.md  HUGGINGFACE_SPACES.md  README.md  build_log_2.txt  evaluation_report.txt  notes.txt  requirements.txt  run_paths.env  server_latency.err  server_latency2.err  server_latency3.err  server_latency4.err
Report/: ProgressReportTemplate.docx  Progress_Report_NMT_MenKan.md
UnityScripts/: HoloLensTranslator.cs
include/NMT/: NMTWrapper.h
nllb_int8/: shared_vocabulary.json
scripts/: benchmark_tcp_batch.py  benchmark_tcp_results.tsv  convert_model.py  evaluate_dataset.py  evaluate_nmt.py  evaluate_nmt_fast.py  hf_space_ui.html  inject_slang_data.py  monitor_lora_training.py  nmt_client.py  nmt_http_api.py  nmt_tcp_server.py  post_lora_export_eval.py  sample_sentences_en.txt  smoke_test_http.py  test_tcp_latency.py
src/: UnityInterface.cpp  main.cpp
src/NMT/: NMTWrapper.cpp
